env/code_53e4d66558ad0/stderr.txt
  File "main.py", line 11
    n(/home/navs)
      ^
SyntaxError: invalid syntax
